classfile_parser/tests/snapshots/class_parse__main.snap
---
source: structural_parser/tests/class_parse.rs
expression: "to_class(&mut cursor, ParsingOption::default().parse_attribute())?"
---
java_version: V17
constant_pool_count: 60
constant_pool:
  len: 60
  entries:
    1:
      MethodRef:
        class_index: 2
        name_and_type_index: 3
    2:
      Class:
        name_index: 4
    3:
      NameAndType:
        name_index: 5
        type_index: 6
    4:
      Utf8:
        length: 16
        bytes:
          - 106
          - 97
          - 118
          - 97
          - 47
          - 108
          - 97
          - 110
          - 103
          - 47
          - 79
          - 98
          - 106
          - 101
          - 99
          - 116
    5:
      Utf8:
        length: 6
        bytes:
          - 60
          - 105
          - 110
          - 105
          - 116
          - 62
    6:
      Utf8:
        length: 3
        bytes:
          - 40
          - 41
          - 86
    7:
      FieldRef:
        class_index: 8
        name_and_type_index: 9
    8:
      Class:
        name_index: 10
    9:
      NameAndType:
        name_index: 11
        type_index: 12
    10:
      Utf8:
        length: 16
        bytes:
          - 106
          - 97
          - 118
          - 97
          - 47
          - 108
          - 97
          - 110
          - 103
          - 47
          - 83
          - 121
          - 115
          - 116
          - 101
          - 109
    11:
      Utf8:
        length: 3
        bytes:
          - 111
          - 117
          - 116
    12:
      Utf8:
        length: 21
        bytes:
          - 76
          - 106
          - 97
          - 118
          - 97
          - 47
          - 105
          - 111
          - 47
          - 80
          - 114
          - 105
          - 110
          - 116
          - 83
          - 116
          - 114
          - 101
          - 97
          - 109
          - 59
    13:
      String:
        string_index: 14
    14:
      Utf8:
        length: 12
        bytes:
          - 72
          - 101
          - 108
          - 108
          - 111
          - 32
          - 119
          - 111
          - 114
          - 108
          - 100
          - 33
    15:
      MethodRef:
        class_index: 16
        name_and_type_index: 17
    16:
      Class:
        name_index: 18
    17:
      NameAndType:
        name_index: 19
        type_index: 20
    18:
      Utf8:
        length: 19
        bytes:
          - 106
          - 97
          - 118
          - 97
          - 47
          - 105
          - 111
          - 47
          - 80
          - 114
          - 105
          - 110
          - 116
          - 83
          - 116
          - 114
          - 101
          - 97
          - 109
    19:
      Utf8:
        length: 7
        bytes:
          - 112
          - 114
          - 105
          - 110
          - 116
          - 108
          - 110
    20:
      Utf8:
        length: 21
        bytes:
          - 40
          - 76
          - 106
          - 97
          - 118
          - 97
          - 47
          - 108
          - 97
          - 110
          - 103
          - 47
          - 83
          - 116
          - 114
          - 105
          - 110
          - 103
          - 59
          - 41
          - 86
    21:
      Class:
        name_index: 22
    22:
      Utf8:
        length: 5
        bytes:
          - 67
          - 108
          - 97
          - 115
          - 115
    23:
      MethodRef:
        class_index: 21
        name_and_type_index: 3
    24:
      FieldRef:
        class_index: 25
        name_and_type_index: 26
    25:
      Class:
        name_index: 27
    26:
      NameAndType:
        name_index: 28
        type_index: 29
    27:
      Utf8:
        length: 4
        bytes:
          - 77
          - 97
          - 105
          - 110
    28:
      Utf8:
        length: 5
        bytes:
          - 99
          - 108
          - 97
          - 122
          - 122
    29:
      Utf8:
        length: 7
        bytes:
          - 76
          - 67
          - 108
          - 97
          - 115
          - 115
          - 59
    30:
      FieldRef:
        class_index: 31
        name_and_type_index: 32
    31:
      Class:
        name_index: 33
    32:
      NameAndType:
        name_index: 34
        type_index: 35
    33:
      Utf8:
        length: 4
        bytes:
          - 69
          - 110
          - 117
          - 109
    34:
      Utf8:
        length: 4
        bytes:
          - 75
          - 65
          - 80
          - 73
    35:
      Utf8:
        length: 6
        bytes:
          - 76
          - 69
          - 110
          - 117
          - 109
          - 59
    36:
      FieldRef:
        class_index: 25
        name_and_type_index: 37
    37:
      NameAndType:
        name_index: 38
        type_index: 35
    38:
      Utf8:
        length: 1
        bytes:
          - 101
    39:
      Class:
        name_index: 40
    40:
      Utf8:
        length: 6
        bytes:
          - 82
          - 101
          - 99
          - 111
          - 114
          - 100
    41:
      MethodRef:
        class_index: 39
        name_and_type_index: 42
    42:
      NameAndType:
        name_index: 5
        type_index: 43
    43:
      Utf8:
        length: 18
        bytes:
          - 40
          - 66
          - 83
          - 73
          - 70
          - 74
          - 68
          - 90
          - 76
          - 82
          - 101
          - 99
          - 111
          - 114
          - 100
          - 59
          - 41
          - 86
    44:
      FieldRef:
        class_index: 25
        name_and_type_index: 45
    45:
      NameAndType:
        name_index: 46
        type_index: 47
    46:
      Utf8:
        length: 1
        bytes:
          - 114
    47:
      Utf8:
        length: 8
        bytes:
          - 76
          - 82
          - 101
          - 99
          - 111
          - 114
          - 100
          - 59
    48:
      Utf8:
        length: 4
        bytes:
          - 67
          - 111
          - 100
          - 101
    49:
      Utf8:
        length: 15
        bytes:
          - 76
          - 105
          - 110
          - 101
          - 78
          - 117
          - 109
          - 98
          - 101
          - 114
          - 84
          - 97
          - 98
          - 108
          - 101
    50:
      Utf8:
        length: 18
        bytes:
          - 76
          - 111
          - 99
          - 97
          - 108
          - 86
          - 97
          - 114
          - 105
          - 97
          - 98
          - 108
          - 101
          - 84
          - 97
          - 98
          - 108
          - 101
    51:
      Utf8:
        length: 4
        bytes:
          - 116
          - 104
          - 105
          - 115
    52:
      Utf8:
        length: 6
        bytes:
          - 76
          - 77
          - 97
          - 105
          - 110
          - 59
    53:
      Utf8:
        length: 4
        bytes:
          - 109
          - 97
          - 105
          - 110
    54:
      Utf8:
        length: 22
        bytes:
          - 40
          - 91
          - 76
          - 106
          - 97
          - 118
          - 97
          - 47
          - 108
          - 97
          - 110
          - 103
          - 47
          - 83
          - 116
          - 114
          - 105
          - 110
          - 103
          - 59
          - 41
          - 86
    55:
      Utf8:
        length: 4
        bytes:
          - 97
          - 114
          - 103
          - 115
    56:
      Utf8:
        length: 19
        bytes:
          - 91
          - 76
          - 106
          - 97
          - 118
          - 97
          - 47
          - 108
          - 97
          - 110
          - 103
          - 47
          - 83
          - 116
          - 114
          - 105
          - 110
          - 103
          - 59
    57:
      Utf8:
        length: 8
        bytes:
          - 60
          - 99
          - 108
          - 105
          - 110
          - 105
          - 116
          - 62
    58:
      Utf8:
        length: 10
        bytes:
          - 83
          - 111
          - 117
          - 114
          - 99
          - 101
          - 70
          - 105
          - 108
          - 101
    59:
      Utf8:
        length: 9
        bytes:
          - 77
          - 97
          - 105
          - 110
          - 46
          - 106
          - 97
          - 118
          - 97
access_flag: Public | Super
this_class: 25
super_class: 2
interfaces_count: 0
interfaces: []
fields_count: 3
fields:
  - access_flag: Public | Static
    name_index: 28
    descriptor_index: 29
    attribute_infos_len: 0
    attribute_infos: []
  - access_flag: Public | Static
    name_index: 38
    descriptor_index: 35
    attribute_infos_len: 0
    attribute_infos: []
  - access_flag: Public | Static
    name_index: 46
    descriptor_index: 47
    attribute_infos_len: 0
    attribute_infos: []
methods_count: 3
methods:
  - access_flag: Public
    name_index: 5
    descriptor_index: 6
    attribute_infos_len: 1
    attribute_infos:
      - attribute_name_index: 48
        attribute_len: 47
        info:
          - 0
          - 1
          - 0
          - 1
          - 0
          - 0
          - 0
          - 5
          - 42
          - 183
          - 0
          - 1
          - 177
          - 0
          - 0
          - 0
          - 2
          - 0
          - 49
          - 0
          - 0
          - 0
          - 6
          - 0
          - 1
          - 0
          - 0
          - 0
          - 1
          - 0
          - 50
          - 0
          - 0
          - 0
          - 12
          - 0
          - 1
          - 0
          - 0
          - 0
          - 5
          - 0
          - 51
          - 0
          - 52
          - 0
          - 0
        attribute:
          Code:
            max_stack: 1
            max_locals: 1
            code_length: 5
            code:
              - 42
              - 183
              - 0
              - 1
              - 177
            instructions:
              - ALOAD_0
              - INVOKESPECIAL:
                  index: 1
              - RETURN
            exception_table_length: 0
            exception_table: []
            attributes_length: 2
            attributes:
              - attribute_name_index: 49
                attribute_len: 6
                info:
                  - 0
                  - 1
                  - 0
                  - 0
                  - 0
                  - 1
                attribute:
                  LineNumberTable:
                    line_number_table_length: 1
                    line_number_table:
                      - start_pc: 0
                        line_number: 1
              - attribute_name_index: 50
                attribute_len: 12
                info:
                  - 0
                  - 1
                  - 0
                  - 0
                  - 0
                  - 5
                  - 0
                  - 51
                  - 0
                  - 52
                  - 0
                  - 0
                attribute:
                  LocalVariableTable:
                    local_variable_table_length: 1
                    local_variable_table:
                      - start_pc: 0
                        length: 5
                        name_index: 51
                        descriptor_index: 52
                        index: 0
  - access_flag: Public | Static
    name_index: 53
    descriptor_index: 54
    attribute_infos_len: 1
    attribute_infos:
      - attribute_name_index: 48
        attribute_len: 55
        info:
          - 0
          - 2
          - 0
          - 1
          - 0
          - 0
          - 0
          - 9
          - 178
          - 0
          - 7
          - 18
          - 13
          - 182
          - 0
          - 15
          - 177
          - 0
          - 0
          - 0
          - 2
          - 0
          - 49
          - 0
          - 0
          - 0
          - 10
          - 0
          - 2
          - 0
          - 0
          - 0
          - 7
          - 0
          - 8
          - 0
          - 8
          - 0
          - 50
          - 0
          - 0
          - 0
          - 12
          - 0
          - 1
          - 0
          - 0
          - 0
          - 9
          - 0
          - 55
          - 0
          - 56
          - 0
          - 0
        attribute:
          Code:
            max_stack: 2
            max_locals: 1
            code_length: 9
            code:
              - 178
              - 0
              - 7
              - 18
              - 13
              - 182
              - 0
              - 15
              - 177
            instructions:
              - GETSTATIC:
                  index: 7
              - LDC:
                  index: 13
              - INVOKEVIRTUAL:
                  index: 15
              - RETURN
            exception_table_length: 0
            exception_table: []
            attributes_length: 2
            attributes:
              - attribute_name_index: 49
                attribute_len: 10
                info:
                  - 0
                  - 2
                  - 0
                  - 0
                  - 0
                  - 7
                  - 0
                  - 8
                  - 0
                  - 8
                attribute:
                  LineNumberTable:
                    line_number_table_length: 2
                    line_number_table:
                      - start_pc: 0
                        line_number: 7
                      - start_pc: 8
                        line_number: 8
              - attribute_name_index: 50
                attribute_len: 12
                info:
                  - 0
                  - 1
                  - 0
                  - 0
                  - 0
                  - 9
                  - 0
                  - 55
                  - 0
                  - 56
                  - 0
                  - 0
                attribute:
                  LocalVariableTable:
                    local_variable_table_length: 1
                    local_variable_table:
                      - start_pc: 0
                        length: 9
                        name_index: 55
                        descriptor_index: 56
                        index: 0
  - access_flag: Static
    name_index: 57
    descriptor_index: 6
    attribute_infos_len: 1
    attribute_infos:
      - attribute_name_index: 48
        attribute_len: 67
        info:
          - 0
          - 12
          - 0
          - 0
          - 0
          - 0
          - 0
          - 35
          - 187
          - 0
          - 21
          - 89
          - 183
          - 0
          - 23
          - 179
          - 0
          - 24
          - 178
          - 0
          - 30
          - 179
          - 0
          - 36
          - 187
          - 0
          - 39
          - 89
          - 4
          - 4
          - 4
          - 12
          - 10
          - 15
          - 4
          - 1
          - 183
          - 0
          - 41
          - 179
          - 0
          - 44
          - 177
          - 0
          - 0
          - 0
          - 1
          - 0
          - 49
          - 0
          - 0
          - 0
          - 14
          - 0
          - 3
          - 0
          - 0
          - 0
          - 2
          - 0
          - 10
          - 0
          - 3
          - 0
          - 16
          - 0
          - 4
        attribute:
          Code:
            max_stack: 12
            max_locals: 0
            code_length: 35
            code:
              - 187
              - 0
              - 21
              - 89
              - 183
              - 0
              - 23
              - 179
              - 0
              - 24
              - 178
              - 0
              - 30
              - 179
              - 0
              - 36
              - 187
              - 0
              - 39
              - 89
              - 4
              - 4
              - 4
              - 12
              - 10
              - 15
              - 4
              - 1
              - 183
              - 0
              - 41
              - 179
              - 0
              - 44
              - 177
            instructions:
              - NEW:
                  index: 21
              - DUP
              - INVOKESPECIAL:
                  index: 23
              - PUTSTATIC:
                  index: 24
              - GETSTATIC:
                  index: 30
              - PUTSTATIC:
                  index: 36
              - NEW:
                  index: 39
              - DUP
              - ICONST_1
              - ICONST_1
              - ICONST_1
              - FCONST_1
              - LCONST_1
              - DCONST_1
              - ICONST_1
              - ACONST_NULL
              - INVOKESPECIAL:
                  index: 41
              - PUTSTATIC:
                  index: 44
              - RETURN
            exception_table_length: 0
            exception_table: []
            attributes_length: 1
            attributes:
              - attribute_name_index: 49
                attribute_len: 14
                info:
                  - 0
                  - 3
                  - 0
                  - 0
                  - 0
                  - 2
                  - 0
                  - 10
                  - 0
                  - 3
                  - 0
                  - 16
                  - 0
                  - 4
                attribute:
                  LineNumberTable:
                    line_number_table_length: 3
                    line_number_table:
                      - start_pc: 0
                        line_number: 2
                      - start_pc: 10
                        line_number: 3
                      - start_pc: 16
                        line_number: 4
attributes_count: 1
attributes:
  - attribute_name_index: 58
    attribute_len: 2
    info:
      - 0
      - 59
    attribute:
      SourceFile:
        source_file_index: 59

